# carrinho-autonomo-pi2

./: .gitignore  HARDWARE.md  README.md
.ia/: contexto-projeto.md  onde-paramos.md  roadmap.md
docs/: ligacoes.md
esp_master/: CMakeLists.txt  README.md
esp_master/main/: CMakeLists.txt  fila.c  fila.h  main.c  secrets.h.example  uart_link.c  uart_link.h  web_server.c  web_server.h  wifi_sta.c  wifi_sta.h
esp_master/main/interface/: app.js  index.html  style.css
esp_slave/: CMakeLists.txt
esp_slave/main/: CMakeLists.txt  main.c
web/: controle_ble.html
